--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyD56h4aTnlv_sITvx4eu1Ka-jJOPLCTHzA",
+    authDomain: "project-3492367285094508650.firebaseapp.com",
+    databaseURL: "https://project-3492367285094508650-default-rtdb.firebaseio.com",
+    projectId: "project-3492367285094508650",
+    storageBucket: "project-3492367285094508650.appspot.com",
+    messagingSenderId: "874065319296",
+    appId: "1:874065319296:web:4eed3eaae19ddb3cf0dd65"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <a target="_blank" href="undefined/icons/set/earth-care--v1">Earth Care</a> icon by <a target="_blank" href="">Icons8</a>
   </body>
 </html>
